b=526941 don't let (level=parent) popups accept focus but transfer focus to the parent r=enndeakin

--HG--
extra : rebase_source : 6c64e2a0b7ebb7f659f4dc0f0378fdffcc6880db